--- a/services.html
+++ b/services.html
@@ -42,6 +42,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">HOME</a></li>
             <li class="active"><a href="services.html">SERVICES</a></li>
+			<li><a href="downloads.html">DOWLOADS</a></li>
             <li><a href="assets/files/PoliciesTermsandConditions.pdf">TERMS & POLICIES</a></li>
             <li><a href="assets/files/bylaws.pdf">BY LAWS</a></li>
             <li><a data-toggle="modal" data-target="#myModal" href="#myModal">CONTACT</a></li>
